# oro

./: .gitignore  README.md  index.html  oro_bg.0f25c3be.wasm  package-lock.json  package.json  src.eecad8c4.js  src.eecad8c4.js.map
.dependabot/: config.yml
docs/: index.html  oro_bg.61da5b66.wasm  oro_bg.8da585c8.wasm  oro_bg.c7d30378.wasm  src.6188b5b3.js  src.6188b5b3.js.map  src.c0b254a9.css  src.c0b254a9.css.map  src.ef7b1494.js  src.ef7b1494.js.map
src/: index.js  index.pug  index.scss
src/frontend/: Cargo.toml
src/frontend/src/: lib.rs  support.rs
src/frontend/src/components/: clock.rs  index.rs  login.rs  mod.rs  nes_button.rs  nes_container.rs  nes_field.rs  nes_form.rs  nes_input.rs  nes_link_button.rs  oro_customer.rs  oro_projectlist.rs
src/frontend/src/mite/: account.rs  customer.rs  mod.rs  support_projects.rs
src/frontend/src/views/: clock.rs  index.rs  login.rs  mod.rs  projects.rs  secure_view.rs
